clusters/k3d-myTestCluster/flux-system/apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextjs
  name: nextjs-app
  namespace: nextjs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nextjs
    spec:
      containers:
      - image: marcjmiller/nextjs-counter
        imagePullPolicy: Always
        name: nextjs-counter
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
