clusters/k3d-myTestCluster/flux-system/apps/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextjs
  name: nextjs
  namespace: nextjs
spec:
  clusterIP: 10.43.81.79
  clusterIPs:
  - 10.43.81.79
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3000-80
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextjs
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
