clusters/k3d-myTestCluster/flux-system/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs
  labels:
    name: nextjs-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  namespace: nextjs
spec:
  rules:
  - http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nextjs
            port: 
              number: 80
